<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.piggymetrics</groupId>
	<artifactId>piggymetrics</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>piggymetrics</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.13</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-cloud.version>2023.0.6</spring-cloud.version>
		<java.version>17</java.version>
		<guava.version>33.4.8-jre</guava.version>
		<flapdoodle.embed.mongo.version>4.24.0</flapdoodle.embed.mongo.version>
		<httpclient.version>4.5.14</httpclient.version>
		<hk2.version>3.1.1</hk2.version>
		<jacoco.version>0.8.13</jacoco.version>
		<joda-time.version>2.14.0</joda-time.version>
		<nimbus-jose-jwt.version>9.39.3</nimbus-jose-jwt.version>
		<woodstox.version>6.7.0</woodstox.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Align transitive versions selected by the upgraded BOMs to avoid dependency tree conflicts. -->
			<dependency>
				<groupId>com.fasterxml.woodstox</groupId>
				<artifactId>woodstox-core</artifactId>
				<version>${woodstox.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${joda-time.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.hk2</groupId>
				<artifactId>hk2-api</artifactId>
				<version>${hk2.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<modules>
		<module>config</module>
		<module>monitoring</module>
		<module>registry</module>
		<module>gateway</module>
		<module>auth-service</module>
		<module>account-service</module>
		<module>statistics-service</module>
		<module>notification-service</module>
		<module>turbine-stream-service</module>
	</modules>

</project>
